--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -1,5 +1,6 @@
 ﻿{
 	"CrmUrl": "https://???.crm.dynamics.com/XRMServices/2011/Organization.svc",
 	"CrmUser": "",
-	"CrmPassword": ""
+  "CrmPassword": "",
+  "WebRoot": "http://localhost:8080/"
 }
