--- a/server/MattermostCrmService.csproj
+++ b/server/MattermostCrmService.csproj
@@ -70,6 +70,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -79,6 +80,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AESThenHMAC.cs" />
+    <Compile Include="LoginHelper.cs" />
     <Compile Include="Messages\AddNote.cs" />
     <Compile Include="AppHost.cs" />
     <Compile Include="Messages\AttachmentFileRequest.cs" />
@@ -89,6 +92,7 @@
     <Compile Include="Messages\DeleteNote.cs" />
     <Compile Include="Messages\Incident.cs" />
     <Compile Include="IncidentMarkdowner.cs" />
+    <Compile Include="Messages\Login.cs" />
     <Compile Include="Messages\MatterMostMessage.cs" />
     <Compile Include="Messages\MatterMostResponse.cs" />
     <Compile Include="Messages\UpdateNote.cs" />
