--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -2,5 +2,6 @@
 	"CrmUrl": "https://???.crm.dynamics.com/XRMServices/2011/Organization.svc",
 	"CrmUser": "",
   "CrmPassword": "",
+  "CrmKey": "CHANGEME",
   "WebRoot": "http://localhost:8080/"
 }
