--- a/server/MattermostCrmService.csproj
+++ b/server/MattermostCrmService.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wrappers\NoteWrapper.cs" />
+    <Compile Include="Wrappers\SlimIncidentWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
