--- a/server/MattermostCrmService.csproj
+++ b/server/MattermostCrmService.csproj
@@ -89,16 +89,14 @@
     <Compile Include="CrmService.cs" />
     <Compile Include="CrmWrapper.cs" />
     <Compile Include="Messages\AuthenticatedRequestBase.cs" />
-    <Compile Include="Messages\BasicIncidentQuery.cs" />
+    <Compile Include="Messages\IncidentQuery.cs" />
     <Compile Include="Messages\DeleteNote.cs" />
     <Compile Include="Messages\Incident.cs" />
     <Compile Include="IncidentMarkdowner.cs" />
-    <Compile Include="Messages\IncidentQueryBase.cs" />
     <Compile Include="Messages\Login.cs" />
     <Compile Include="Messages\MatterMostMessage.cs" />
     <Compile Include="Messages\MatterMostResponse.cs" />
     <Compile Include="Messages\UpdateNote.cs" />
-    <Compile Include="Messages\UserIncidentQuery.cs" />
     <Compile Include="Messages\Users.cs" />
     <Compile Include="Messages\VersionRequest.cs" />
     <Compile Include="Wrappers\AttachmentFileWrapper.cs" />
