More of change owner

--- a/server/MattermostCrmService.csproj
+++ b/server/MattermostCrmService.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CrmWrapper.cs" />
     <Compile Include="Messages\AuthenticatedRequestBase.cs" />
     <Compile Include="Messages\BasicIncidentQuery.cs" />
+    <Compile Include="Messages\ChangeOwner.cs" />
     <Compile Include="Messages\DeleteNote.cs" />
     <Compile Include="Messages\Incident.cs" />
     <Compile Include="IncidentMarkdowner.cs" />
