--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -3,5 +3,6 @@
 	"CrmUser": "",
   "CrmPassword": "",
   "CrmKey": "CHANGEME",
-  "WebRoot": "http://localhost:8080/"
+  "WebRoot": "http://localhost:8080/",
+  "NetworkAttachmentsBase":  "\\\\servername\\sharename\\directoryname"
 }
