--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -4,5 +4,11 @@
   "CrmPassword": "",
   "CrmKey": "CHANGEME",
   "WebRoot": "http://localhost:8080/",
-  "NetworkAttachmentsBase":  "\\\\servername\\sharename\\directoryname"
+  "NetworkAttachmentsBase": "\\\\servername\\sharename\\directoryname",
+  "UserMap": [
+    {
+      "name": "?",
+      "crmid": "GUID"
+    }
+  ]
 }
