--- a/server/MattermostCrmService.csproj
+++ b/server/MattermostCrmService.csproj
@@ -96,6 +96,8 @@
     <Compile Include="IncidentMarkdowner.cs" />
     <Compile Include="Messages\Login.cs" />
     <Compile Include="Messages\MatterMostMessage.cs" />
+    <Compile Include="Messages\MatterMostMyIncidents.cs" />
+    <Compile Include="Messages\MatterMostMyIncidentsResponse.cs" />
     <Compile Include="Messages\MatterMostResponse.cs" />
     <Compile Include="Messages\UpdateNote.cs" />
     <Compile Include="Messages\UploadRequest.cs" />
