Stripping more identifying fields from slimincidentwrapper

--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -1,5 +1,5 @@
 ﻿{
-	"CrmUrl": "https://???.crm.dynamics.com/XRMServices/2011/Organization.svc",
+	"CrmOrg": "only the part before .crm.dynamics.com",
 	"CrmUser": "",
   "CrmPassword": "",
   "CrmKey": "CHANGEME",
