--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -2,7 +2,7 @@
 	"CrmOrg": "only the part before .crm.dynamics.com",
 	"CrmUser": "",
   "CrmPassword": "",
-  "CrmKey": "CHANGEME",
+  "CrmKey": null,
   "WebRoot": "http://localhost:8080/",
   "NetworkAttachmentsBase": "\\\\servername\\sharename\\directoryname",
   "UserMap": [
