added search.html to solution

--- a/server/MattermostCrmService.csproj
+++ b/server/MattermostCrmService.csproj
@@ -144,6 +144,9 @@
     <Content Include="static\templates\index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="static\templates\search.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
